TS-4728: Return bool from LogHost boolean functions.